--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-	 <div class="code-editor">
+
+	<ul class="navbar"> 
+		<li><a class="active" href="#files">File</a></li>
+		<li><a href="#git">Git</a></li>
+		<li><a href="#settings">Settings</a></li>
+		<li><a href="#about">About</a></li>
+	  </ul>
+	
+	<div class="code-editor">
+
           <div class="code"> 
 			 <div class="html-code"> 
 			   <h4>HTML</h4>
@@ -28,6 +37,8 @@
 		 </div>
 		 <iframe id="result"></iframe>  
 	 </div>
+
+	 
 
   <script src="/dist/index.js"></script>
 </body>
